# taiwan-stock-risk-dashboard

./: .gitignore  README.md
.github/workflows/: deploy-pages.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  scheduler.py  schemas.py
backend/app/data/: __init__.py  finmind_client.py  mock_provider.py  provider.py  stock_provider.py  universe.py
backend/app/indicators/: composite.py  margin_institutional.py  per_deviation.py  stock_strategy.py  us_reference.py  utils.py  volatility.py
backend/app/services/: alerts.py  backtest.py  picks_service.py  risk_service.py
backend/scripts/: build_static.py
backend/tests/: test_indicators.py  test_strategy.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  mockData.ts  types.ts
frontend/src/components/: Backtest.tsx  DailyPicks.tsx  Header.tsx  LightBadge.tsx  ModuleC.tsx  ModuleD.tsx  NumberField.tsx  PickCard.tsx  RiskGauge.tsx  SignalCard.tsx  SignalCharts.tsx  UsReference.tsx  Watchlist.tsx
frontend/src/lib/: config.ts  format.ts  light.ts  style.ts  useLocalStorage.ts
