[project]
name = "taiwan-stock-risk-dashboard-backend"
version = "0.1.0"
description = "台股頂部風險儀表板 — 資料抓取與燈號計算後端 (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.data", "app.indicators", "app.services"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
